attempt to fix overflow of images on mobile browsers

--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,8 @@ body {
         overflow: hidden;
         height: 80%;
         min-height: 5rem;
+        overflow: scroll;
+        -webkit-overflow-scrolling: touch;
 
         .middle-image-container {
           min-width: 100%;
