--- a/src/components/middle/Middle.scss
+++ b/src/components/middle/Middle.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 1rem;
+  min-height: 12rem;
 
   .middle-swiper-container {
     margin: auto;
